# postgresql-setup

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  README.release  README.rpm-dist  README.rpm-dist.in  README.rpm-dist.template  THANKS  TODO  configure.ac  initdb.in  legacy-sysv-script.in  postgresql-check-db-dir  postgresql-check-db-dir.in  postgresql-ctl.in  postgresql-setup  postgresql-setup.in  postgresql.init.in  postgresql.service  postgresql.service.in  style.dsl  upgrade.in  upgrade_config.template
.github/workflows/: testing-farm.yaml
.travis/: distcheck  run-in-docker
auxdir/: install_local  our-install-sh
build-helpers/: Makefile.inc  build-config
conf/: postgresql.in
doc/: Makefile.am  Makefile.inc
etc/postgresql-setup/upgrade/: postgresql.conf
lib/rpm/: Makefile.inc
lib/rpm/macros.d/: macros-test.in  macros.in
m4/: _ax_text_tpl.m4  packaging.m4
sbin/: Makefile.inc  new-systemd-unit.in
share/postgresql-setup/: .gitignore  Makefile.inc  library.sh.in  postgresql_pkg_tests.sh.in
tests/: Makefile.am  atlocal.in  testsuite.at
tests/tmt/dummy/: main.fmf  pass.sh
tmt/dummy/: main.fmf
tmt/plans/: container-fedora-init.fmf  container-fedora-upgrade.fmf  dummy.fmf  fedora-checksums.fmf  fedora-container-init.fmf  fedora-container-upgrade.fmf  fedora-init.fmf  fedora-upgrade.fmf
tmt/tests/container/sanity/init/: init.sh  main.fmf
tmt/tests/container/sanity/upgrade/: main.fmf  upgrade.sh
tmt/tests/dummy/: main.fmf
tmt/tests/virtual/checksums/: main.fmf
tmt/tests/virtual/checksums/disable/: main.fmf  test.sh
tmt/tests/virtual/checksums/disable-after-enabling/: main.fmf  test.sh
tmt/tests/virtual/checksums/disable-and-enable/: main.fmf  test.sh
tmt/tests/virtual/checksums/duplicate-enable-flags/: main.fmf  test.sh
tmt/tests/virtual/checksums/enable/: main.fmf  test.sh
tmt/tests/virtual/checksums/pre-existing/: main.fmf  test.sh
tmt/tests/virtual/checksums/pre-pg18/: main.fmf  test.sh
tmt/tests/virtual/sanity/init/: .testinfo.tmt  init.sh  main.fmf
tmt/tests/virtual/sanity/locale-change/: locale.sh  main.fmf
tmt/tests/virtual/sanity/upgrade/: main.fmf  upgrade.sh
